# MyGLSurfaceView

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tencent/myglsurfaceview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/tencent/myglsurfaceview/: MainActivity.java  Square.java
app/src/main/res/layout/: activity_main.xml  virtual_display.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tencent/myglsurfaceview/: ExampleUnitTest.java
